tests/diag/shell-amp.id
use app/ish
activate Shell
echo a & echo b
